# mcp-remote-macos-use

./: .env.example  Dockerfile  README.md  compose.yml  pyproject.toml  test_mcp_local.py
.github/workflows/: main.yml  pull-request.yml
tests/: test_init.py  test_server.py
