[project]
name = "hanzo-remote-macos"
version = "0.1.0"
description = "MCP server that enables AI to fully control remote macOS systems"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Hanzo AI", email = "engineering@hanzo.ai"}
]
keywords = ["mcp", "macos", "vnc", "remote-control", "ai", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
urls = {Homepage = "https://github.com/hanzoai/mcp-remote-macos-use", Repository = "https://github.com/hanzoai/mcp-remote-macos-use"}
dependencies = [
    "mcp>=1.4.1",
    "python-dotenv>=1.0.1",
    "pillow>=10.0.0",
    "pyDes>=2.0.1",
    "cryptography>=44.0.0",
    "anthropic>=0.49.0",
    "paramiko>=3.5.1",
    "livekit>=1.0.5",
    "aiohttp>=3.8.1",
    "websockets>=10.0",
    "aiortc>=1.3.2",
    "livekit-api>=1.0.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "pytest>=7.4.0", "pytest-asyncio>=0.21.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_remote_macos"]

[project.scripts]
hanzo-remote-macos = "mcp_remote_macos.server:main" 